crates/analyzer/tests/snapshots/errors__call_send_value_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: incorrect type for `send_value` argument `to`
  ┌─ [snippet]:3:23
  │
3 │   std::send_value(to: true, wei: 0)
  │                       ^^^^ this has type `bool`; expected type `address`


